# cpp-graphics-engine

./: CMakeLists.txt  main.cpp
include/Core/: Camera.h  Geometry.h  Material.h  Mesh.h  Renderer.h  Scene.h  Shader.h  ShadowMap.h
include/Core/Geometry/: CubeGeometry.h  ReferenceGeometry.h
include/Loaders/: OBJ.h  OBJLoader.h
source/Core/: Camera.cpp  Geometry.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShadowMap.cpp
source/Core/Geometry/: CubeGeometry.cpp  ReferenceGeometry.cpp
source/Loaders/: OBJ.cpp  OBJLoader.cpp
source/shaders/: default.frag  default.vert
